Refactor: Use getFirst() instead of get(0)
Refactors the tests to use `getFirst()` instead of `get(0)`
when retrieving the first element from a List. This improves
code readability and aligns with best practices for retrieving
the first element of a collection.